<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@drawable/round_corner_shape"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"

                    android:src="@drawable/login_image"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorWhite"
            android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/grand_hotel"
                        android:text="@string/app_name"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textFontWeight="400"
                        android:lineSpacingExtra="65pt"
                        android:textSize="50sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/sharencare"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textFontWeight="400"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:layout_marginTop="15dp"
                        android:text="@string/signin"
                        android:layout_gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textFontWeight="400"
                        android:textSize="30sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato"
                        android:layout_marginTop="5dp"
                        android:text="@string/signin"
                        android:layout_gravity="center"
                        android:textColor="@color/colorRwjbhred"
                        android:id="@+id/login_err_txt"
                        android:visibility="gone"
                        android:textFontWeight="400"
                        android:textSize="16dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone"
                        style="@style/TextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:hint="@string/phone"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/otp"
                            style="@style/TextLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20sp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:hint="@string/otp"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:id="@+id/getotp"
                            style="@style/BrandButtonStyle"
                            android:layout_margin="20dp"
                            android:text="@string/getotp" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signin"
                        style="@style/BrandButtonStyle"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/signin" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_gravity="right"
                android:text="@string/poweredby"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="right"
                android:src="@drawable/ibm_logo"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>