<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_corner_white_shape">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        android:elevation="20dp"
        android:id="@+id/fab_notify"
        android:src="@drawable/bell"
        android:backgroundTint="@color/colorWhite"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:elevation="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:elevation="10dp"
            android:layout_marginTop="110dp"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_color="@color/colorBlack"
            app:civ_circle_background_color="@color/colorWhite"
            app:civ_border_width="2dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.57"

            android:elevation="-10dp"
            android:orientation="vertical">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="20dp"
            android:layout_weight="0.33"
            android:background="@drawable/top_round_corner_shape"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/welcome"
                android:fontFamily="@font/lato"
                android:gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:text="@string/welcome"
                android:textColor="@color/colorBlack"
                android:textSize="30sp" />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logout"
                    android:layout_alignRight="@+id/welcome"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/signout"
                    />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome"
                android:id="@+id/caption"
                android:fontFamily="@font/lato"
                android:gravity="center_horizontal"
                android:text="@string/caption"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:id="@+id/line"
                android:layout_below="@+id/caption"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:background="@color/colorBlack">

            </View>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:id="@+id/see_others"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@color/buttonBlue"
                android:fontFamily="@font/lato"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/shares"
                style="@style/shareButtonStyle"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/see_others"
                android:id="@+id/see_need"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@color/buttonGreen"
                android:fontFamily="@font/lato"
                android:textAllCaps="false"
                android:textSize="20dp"
                android:textColor="@color/colorWhite"
                android:text="@string/needs"
                style="@style/requestButtonStyle"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/grand_hotel"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="30dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:text="@string/sharencare"
                    android:fontFamily="@font/montserrat"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorBlack"
                    android:textSize="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="15dp"
                    android:id="@+id/powered"
                    android:layout_alignParentRight="true"
                    android:text="@string/poweredby"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:layout_below="@+id/powered"
                    android:src="@drawable/ibm_logo"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>