<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="My Action Center"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="25dp"/>

 <!--       <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/actn_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Need Request"
                android:textAllCaps="false"
                android:layout_weight="1"
                style="?attr/materialButtonOutlinedStyle"
                />
            <Button
                android:id="@+id/actn_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Share Request"
                android:layout_marginRight="20dp"
                android:textAllCaps="false"

                style="?attr/materialButtonOutlinedStyle"
                />
        </LinearLayout>
       <!-- </com.google.android.material.button.MaterialButtonToggleGroup>-->

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="@drawable/round_corner_white_shape"
        android:layout_margin="5dp">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_action"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/grand_hotel"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:text="@string/sharencare"
                android:fontFamily="@font/montserrat"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:id="@+id/powered"
                android:layout_alignParentRight="true"
                android:text="@string/poweredby"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_below="@+id/powered"
                android:src="@drawable/ibm_logo"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>