<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparentGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/needToolbar">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Need"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/lato"
                    android:textSize="25dp"
                    android:id="@+id/needCatalogTitle"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="30dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorBlack"
                    android:layout_below="@+id/needCatalogTitle"
                    android:layout_marginRight="150dp"
                    android:layout_marginLeft="150dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select the category of items you need"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/lato"
                    android:textSize="14dp"
                    android:layout_below="@+id/needCatalogTitle"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caption1"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="@font/lato"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="5dp"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/colorWhite"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:iconifiedByDefault="false"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_corner_search_view_shape"
                    android:queryHint="Search Here" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/transparentWhite"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/need_category_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/grand_hotel"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="30dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:text="@string/sharencare"
                android:fontFamily="@font/montserrat"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:id="@+id/powered"
                android:layout_alignParentRight="true"
                android:text="@string/poweredby"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_below="@+id/powered"
                android:src="@drawable/ibm_logo"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>